# vpn_regular_dashboard

./: LICENSE  merge_configs.py  merge_configs_fixed.py  merge_configs_minimal.py  merge_configs_v2.py  pyproject.toml  switch_profile.py  switch_to_boostnet.py  switch_to_merged.py  检查报告.md
data/: node_metrics.json
legacy-switcher/: pyproject.toml
legacy-switcher/src/vpn_auto_switch/: switcher.py
src/vpn_dashboard/: main.py
src/vpn_dashboard/static/: style.css
src/vpn_dashboard/templates/: index.html
