[project]
name = "vpn-dashboard"
version = "0.1.0"
description = "Grafana-style VPN monitoring dashboard"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.6",
    "requests>=2.32.5",
]

[project.scripts]
vpn-dashboard = "vpn_dashboard.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
