[project]
name = "vpn-dashboard"
version = "0.2.0"
description = "VPN monitoring dashboard with IP geolocation and verified switching"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.6",
    "requests>=2.32.5",
    "requests-unixsocket>=0.3.0",
    "aiofiles>=23.0.0",
]

[project.scripts]
vpn-dashboard = "vpn_dashboard.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
